Use URI instead of URL: URL.(equals|hashCode) require internet access.